--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,16 @@
         <activity android:name=".SignInPageActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUpPageActivity"></activity>
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".SignUpPageActivity" />
+        <activity android:name=".HomeActivity" />
+        <activity
+            android:name=".TypeActivity"
+            android:label="@string/title_activity_type"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
