--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.google.firebase:firebase-core:16.0.4'
     implementation 'com.google.firebase:firebase-database:16.0.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.android.support:support-media-compat:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
 
@@ -37,6 +37,10 @@ dependencies {
 
     // EditText library
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+
+    // RecyclerView
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 
 
 }
