--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,4 +28,10 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+
+    android {
+          lintOptions {
+              abortOnError false
+          }
+      }
       # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
