--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".TypeActivity"
             android:label="@string/title_activity_type"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AdminActivity"></activity>
+        <activity android:name=".ServiceActivity"></activity>
     </application>
 
 </manifest>
