--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     // CardView
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+    // Multiple FABs
+    implementation 'com.github.clans:fab:1.6.4'
 
 
 }
