--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     // Calendar
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 
+    // Calendar horizontal
+    implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
 
 
 
